@@ -12,7 +12,7 @@ import java.util.Collections;
 
 
 
-public class clientHandler extends DatabaseHandler implements Runnable {
+public class clientHandler implements Runnable {
     private Socket socket;
     public OutputStream os;
     public InputStream is;
@@ -29,6 +29,9 @@ public class clientHandler extends DatabaseHandler implements Runnable {
     public Set<Integer> recomOnLike;
     public Set<Integer> recomOnTime;
     public Set<String> groups;
+    public static Set<String> languages;
+    public static Set<String> artists;
+    public static Set<String> generes;
     public Set<String> Title = new LinkedHashSet<>();
     public ArrayList<String> Playlists;
     public ArrayList[] history;
@@ -49,6 +52,9 @@ public class clientHandler extends DatabaseHandler implements Runnable {
             dis = new DataInputStream(is);
             ps = new PrintStream(socket.getOutputStream());
             objectOutputStream = new ObjectOutputStream(os);
+            
+            //starting Http Server
+            
         }catch (IOException e){
             e.printStackTrace();
         }
@@ -58,8 +64,16 @@ public class clientHandler extends DatabaseHandler implements Runnable {
     public void run() {
            try {
               // ps.println("hello\n");
+               DatabaseHandler db = new DatabaseHandler();
                String work = dis.readUTF();
-               String uname="";
+               String uname= "";
+               
+              if(!work.equals("register") && !work.equals("login")){
+                  uname = dis.readUTF();
+                  if(!db.checkLogin(uname))
+                      return;
+              }
+               
                String pass="";
                String email="";
                String name = "";
@@ -71,52 +85,52 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                        uname = dis.readUTF();
                        pass = dis.readUTF();
                        ps.println("checking");
-                       if (login(uname,pass))
+                       if (db.login(uname,pass))
                        {                              
                           ps.println("true");
                        }
                        else
                            ps.println("failed");
+                       ps.flush();
                        break;
                    case "register":
                        uname = dis.readUTF();
                        pass = dis.readUTF();
                        email = dis.readUTF();
                        ps.println("checking");
-                       if (checkEmail(email))
+                       if (db.checkEmail(email))
                            ps.println("emailExist");
                        else
                        {
-                           if (register(uname,pass,email))
+                           if (db.register(uname,pass,email))
                            {                            
                                ps.println("Complete");
                            }
                            else
                                ps.println("userExist");
                        }
+                       ps.flush();
                        break;
                    case "getSong":
                        Id = dis.readUTF();
                        id = Integer.parseInt(Id);
-                       File file = files[id-1];
-                      // URI uri = file.toURI();
-                       URL url = file.toURL();
+                       URL url = new URL("http://localhost:8500/ampify/song"+id+".mp3");
                        objectOutputStream.writeObject(url);
                        objectOutputStream.flush();
                        break;
                    case "getSrt":
                        Id = dis.readUTF();
                        id = Integer.parseInt(Id);
-                       file = srtfiles[id-1];
+                       File file = srtfiles[id-1];
                        objectOutputStream.writeObject(file);
                        objectOutputStream.flush();
                        break;
                    case "recent":
                        uname = dis.readUTF();
-                       recomOnTime = getRecent(uname);
+                       recomOnTime = db.getRecent(uname);
                        objectOutputStream.writeObject(recent);
                        for(int songId:recomOnTime){
-                           recentTitle.add(getSongTitle(songId));
+                           recentTitle.add(db.getSongTitle(songId));
                        }
                       // System.out.println(recomOnTime);
                        //System.out.println(recentTitle);
@@ -124,10 +138,10 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                        objectOutputStream.flush();
                        break;
                    case "trending":
-                       trending = getTrending();
+                       trending = db.getTrending();
                        objectOutputStream.writeObject(trending);
                        for(int songId:trending){
-                           trendingTitle.add(getSongTitle(songId));
+                           trendingTitle.add(db.getSongTitle(songId));
                        }
                        objectOutputStream.writeObject(trendingTitle);
                        objectOutputStream.flush();
@@ -135,13 +149,13 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                    case "recommended":
                        uname = dis.readUTF();
                        String time = dis.readUTF();
-                       recomOnTime = getRecommendedOnTime(time,uname);
-                       recomOnLike = getRecommendedOnLikes();
+                       recomOnTime = db.getRecommendedOnTime(time,uname);
+                       recomOnLike = db.getRecommendedOnLikes();
                        for(int songId:recomOnTime){
-                           trendingTitle.add(getSongTitle(songId));
+                           trendingTitle.add(db.getSongTitle(songId));
                        }
                        for(int songId:recomOnLike){
-                           recentTitle.add(getSongTitle(songId));
+                           recentTitle.add(db.getSongTitle(songId));
                        }
                        objectOutputStream.writeObject(recomOnTime);
                        objectOutputStream.writeObject(trendingTitle);
@@ -151,7 +165,7 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                        break;
                    case "history":                      
                        uname = dis.readUTF();
-                       history = getHistory(uname);
+                       history = db.getHistory(uname);
                        objectOutputStream.writeObject(history);
                        objectOutputStream.flush();
                        break;
@@ -162,17 +176,18 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                        time = dis.readUTF();
                        String hour = dis.readUTF();
                        id = Integer.parseInt(Id);
-                       addToHistory(uname,id,time,date,hour);
+                       db.addToHistory(uname,id,time,date,hour);
                        break;
                    case "createPlaylist":
                        uname = dis.readUTF();
                        name = dis.readUTF();
                        ps.println("creating");
-                       if(createPlaylist(uname,name)){
+                       if(db.createPlaylist(uname,name)){
                            ps.println("created");
                        }else{
                            ps.println("error");
                        }
+                       ps.flush();
                        break;
                    case "addToPlaylist":
                        uname = dis.readUTF();
@@ -180,24 +195,25 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                        Id = dis.readUTF();
                        id = Integer.parseInt(Id);
                        ps.println("adding");
-                       if(addToPlaylist(uname,name,id))
+                       if(db.addToPlaylist(uname,name,id))
                            ps.println("added");
                        else
                            ps.println("error");
+                       ps.flush();
                        break;
                    case "getPlaylist":
                        uname  = dis.readUTF();
                        name = dis.readUTF();
-                       recomOnTime = getPlaylist(uname,name);
+                       recomOnTime = db.getPlaylist(uname,name);
                        for(int i:recomOnTime)
-                           recentTitle.add(getSongTitle(i));
+                           recentTitle.add(db.getSongTitle(i));
                        objectOutputStream.writeObject(recomOnTime);
                        objectOutputStream.writeObject(recentTitle);
                        objectOutputStream.flush();
                        break;
                    case "getPlaylists":
                        uname = dis.readUTF();
-                       Playlists = getPlaylists(uname);
+                       Playlists = db.getPlaylists(uname);
                        objectOutputStream.writeObject(Playlists);
                        objectOutputStream.flush();
                        break;
@@ -207,29 +223,30 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                        Id = dis.readUTF();
                        id = Integer.parseInt(Id);
                        ps.println("doing");
-                       if(likeOrDislike(uname,status,id))
+                       if(db.likeOrDislike(uname,status,id))
                            ps.println("done");
                        else
                            ps.println("error");
+                       ps.flush();
                        break;
                    case "AllSong":
-                       Playlists = getAllSong();
+                       Playlists = db.getAllSong();
                        objectOutputStream.writeObject(Playlists);
                        objectOutputStream.flush();
                        break;
                    case "searchHistory":
                        uname = dis.readUTF();
-                       Playlists = getserchHistory(uname);
+                       Playlists = db.getserchHistory(uname);
                        objectOutputStream.writeObject(Playlists);
                        objectOutputStream.flush();
                        break;
                    case "searchResult":
                        String item = dis.readUTF();
-                       recomOnLike = getSearchResult(item);
+                       recomOnLike = db.getSearchResult(item);
                        for(int i:recomOnLike)
                        {
-                           String title = getSongTitle(i);
-                           String artist = getSongArtist(i);
+                           String title = db.getSongTitle(i);
+                           String artist = db.getSongArtist(i);
                            recentTitle.add(title+"\t"+"\t"+artist);
                        }
                        objectOutputStream.writeObject(recomOnLike);
@@ -239,68 +256,69 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                    case "addToSearchHistory":                 
                        uname = dis.readUTF();
                        item = dis.readUTF();
-                       addToSearchHistory(uname,item);
+                       db.addToSearchHistory(uname,item);
                        break;   
                    case "increaseView":
                        Id = dis.readUTF();
                        id = Integer.parseInt(Id);
-                       increaseView(id);
+                       db.increaseView(id);
                        break;
                    case "share":
                        uname = dis.readUTF();
                        String pname = dis.readUTF();
                        String uname2 = dis.readUTF();
                        ps.println("doing");
-                       if(checkPlaylist(uname2,pname))
+                       if(db.checkPlaylist(uname2,pname))
                        {
                            ps.println("playlist exist");
                            break;
                        }
-                       if(checkUser(uname2))
+                       if(db.checkUser(uname2))
                        {
-                           sharePlaylist(uname,pname,uname2);
+                           db.sharePlaylist(uname,pname,uname2);
                            ps.println("shared");
                        }
                        else
                            ps.println("user not exist");
+                       ps.flush();
                        break;
-                   case "details":
-                       System.out.println("hello");
-                       String type = dis.readUTF();
+                   case "LanguageDetails":
                        uname = dis.readUTF();
                        String detail = dis.readUTF();
-                       System.out.println(type);
-                       if(type.equals("language"))
-                           insertIntolanguage(uname,detail);
-                       else
-                       {
-                           if(type.equals("artist"))
-                               insertIntoArtist(uname,detail);
-                           else
-                               insertIntoGeneres(uname,detail);
-                       }
+                       db.insertIntolanguage(uname,detail);
+                       break;
+                   case "ArtistDetails":
+                       uname = dis.readUTF();
+                       detail = dis.readUTF();
+                       db.insertIntoArtist(uname,detail);
+                       break;
+                   case "GeneresDetails":
+                       uname = dis.readUTF();
+                       detail = dis.readUTF();
+                       db.insertIntoGeneres(uname,detail);
                        break;
                    case "createGroup":
                        uname = dis.readUTF();
                        name = dis.readUTF();
                        ps.println("creating");
-                       if(createGroup(uname,name))
+                       if(db.createGroup(uname,name))
                            ps.println("true");
                        else
                            ps.println("group exist");
+                       ps.flush();
                        break;
                    case "getGroups":
                        uname = dis.readUTF();
-                       groups = getGroups(uname);
+                       groups = db.getGroups(uname);
                        objectOutputStream.writeObject(groups);
                        objectOutputStream.flush();
                        break;
                    case "groupDetails":
                        name = dis.readUTF();
-                       groups = getUsers(name);
-                       trending = getTrending();
+                       groups = db.getUsers(name);
+                       trending = db.getTrending();
                        for(int songId:trending){
-                           Title.add(getSongTitle(songId));
+                           Title.add(db.getSongTitle(songId));
                        }
                        objectOutputStream.writeObject(Title);
                        objectOutputStream.writeObject(groups);
@@ -310,21 +328,60 @@ public class clientHandler extends DatabaseHandler implements Runnable {
                        name = dis.readUTF();
                        uname = dis.readUTF();
                        ps.println("adding");
-                       if(checkUser(uname))
+                       if(db.checkUser(uname))
                        {
-                           addUser(name,uname);
+                           db.addUser(name,uname);
                            ps.println("done");
                        }
                        else{
                            ps.println("user do not exist");
                        }
-                           
+                       ps.flush();   
                        break;
                    case "liked":
                        uname = dis.readUTF();
-                       groups = getLiked(uname);
+                       groups = db.getLiked(uname);
                        objectOutputStream.writeObject(groups);
                        objectOutputStream.flush();
+                       break;
+                   case "getDetails":
+                       db.getDetail();
+                       objectOutputStream.writeObject(languages);
+                       objectOutputStream.writeObject(artists);
+                       objectOutputStream.writeObject(generes);
+                       objectOutputStream.flush();
+                       break;
+                   case "DeleteSong":
+                       uname = dis.readUTF();
+                       String pName = dis.readUTF();
+                       Id = dis.readUTF();
+                       id = Integer.parseInt(Id);
+                       db.deleteSong(uname, pName, id);
+                       break;
+                   case "DeletePlaylist":
+                       uname = dis.readUTF();
+                       pName = dis.readUTF();
+                       db.deletePlaylist(uname, pName);
+                       break;
+                   case "DeleteMember":
+                       String admin = dis.readUTF();
+                       uname = dis.readUTF();
+                       pName = dis.readUTF();
+                       if(db.checkForAdmin(admin, pName))
+                       {
+                          db.deleteMember(uname, pName);
+                          ps.println("true");
+                       }
+                       else
+                       {
+                           ps.println("Not Admin");
+                       }
+                       ps.flush();
+                       break;
+                   case "DeleteGroup":
+                       uname = dis.readUTF();
+                       pName = dis.readUTF();
+                       db.deleteMember(uname, pName);
                        break;
                }
               
@@ -345,5 +402,6 @@ public class clientHandler extends DatabaseHandler implements Runnable {
             }
            }      
     }
+    
 }
 
